<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.jellio.flowerpower.MainActivity"
    android:background="@color/accent">

    <TextView
        android:id="@+id/txt_plant_healthiness"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/plant_health_heading"
        android:padding="8dp"
        android:paddingStart="16dp"
        android:textColor="@color/primary_light"
        android:textSize="16sp"/>

    <ImageView
        android:id="@+id/prvwImage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <TextView
        android:id="@+id/txt_analyzing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:gravity="center"
        android:textSize="16sp"
        android:textColor="@color/primary_light"
        android:text="@string/btn_analyze_hint"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/primary">
        <Button
            android:id="@+id/btn_take_picture"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:text="@string/take_picture"
            android:background="@color/primary"
            android:textColor="@color/primary_light"/>
        <Button
            android:id="@+id/btn_use_default"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:text="@string/use_default"
            android:background="@color/primary"
            android:textColor="@color/primary_light"/>
        <Button
            android:id="@+id/btn_analyze_picture"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:text="@string/analyze_health"
            android:background="@color/primary"
            android:textColor="@color/primary_light"/>
    </LinearLayout>
</LinearLayout>
